Show blue quorum bar in bargraph more clear, fixed too big quorum in ie

--- a/static/style.css
+++ b/static/style.css
@@ -651,6 +651,11 @@ form.unit_selector {
   height: 1.3ex;
 }
 
+.bargraph .quorum {
+  margin-top: 0.2ex;
+  height: 1.9ex;
+}
+
 /*************************************************************************
  * vertical ui.form
  */
